@@ -1,0 +1,17 @@
+# $NetBSD$
+#
+
+DISTNAME=	cssselect-0.7.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+CATEGORIES=	textproc
+MASTER_SITES=	http://pypi.python.org/packages/source/c/cssselect/
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://packages.python.org/cssselect/
+COMMENT=	parses CSS3 Selectors and translates them to XPath 1.0
+LICENSE=	modified-bsd
+
+USE_LANGUAGES=	# none
+
+.include "../../lang/python/egg.mk"
+.include "../../mk/bsd.pkg.mk"
