@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (cssselect-0.7.1.tar.gz) = 77787495a6dc2d02231b62cfa962e2c202a9cb23
+RMD160 (cssselect-0.7.1.tar.gz) = a30ebdddeacfdd2fe3a7176b3471eacde8732399
+Size (cssselect-0.7.1.tar.gz) = 30480 bytes
