@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.164 2013/01/13 04:31:17 ryoon Exp $
+$NetBSD: CHANGES-2013,v 1.166 2013/01/13 15:22:06 jakllsch Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -227,3 +227,5 @@ Changes to the packages collection and infrastructure in 2013:
 	Added textproc/uncrustify version 0.59 [ryoon 2013-01-13]
 	Added net/bwping version 1.7 [ryoon 2013-01-13]
 	Updated net/mikutter to 0.2.1.1119 [obache 2013-01-13]
+	Added textproc/py-cssselect version 0.7.1 [jakllsch 2013-01-13]
+	Updated misc/calibre to 0.9.7nb1 [jakllsch 2013-01-13]
